--- a/public/css/rating.css
+++ b/public/css/rating.css
@@ -48,12 +48,11 @@
 }
 
 .starability-slot {
-  display: block;
-  position: relative;
-  width: 150px;
-  min-height: 60px;
-  padding: 0;
-  border: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.5rem;
 }
 
 .starability-slot > input {
